Added nodes and edges for customers. Added level for nodes

--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
 <script src="https://yastatic.net/jquery/3.3.1/jquery.min.js"></script>
 <script>
   $(function() {
-    $.get('edges.json', function(edges) {
-      $.get('nodes.json', function(nodes) {
+    $.get('edges_cus.json', function(edges) {
+      $.get('nodes_cus.json', function(nodes) {
         render(edges, nodes);
       });
     });
